--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -1,7 +1,7 @@
 <import src="/template/authlogin/index.wxml" />
 <view>
   <view wx:if="{{userInfo.avatarUrl}}" class="userinfo">
-    <image wx:if="{{userInfo.avatarUrl}}" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
   <view wx:else class="userinfo">
