--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -13,9 +13,9 @@
 
 
   <view class="goods-container">
-    <view class="goods-box" wx:for="{{items}}" wx:key="item">
-      <view class="img-box">
-        <image src="{{item.imageurl}}" class="image" mode="aspectFill" lazy-load="true" />
+    <view class="goods-box" wx:for="{{items}}" wx:key="item" bindtap="tabClick" id="{{item.id}}">
+      <view class="img-box" >
+        <image src="{{baseurl + item.imageurl}}" class="image" mode="aspectFill" lazy-load="true" />
       </view>
       <view class="goods-title">{{item.name}}</view>
 
