--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -19,7 +19,7 @@
       <view class="tv">金币</view>
     </view>
     <view class='item' bindtap='inviteRecord'>
-      <view class="text">{{invite}}</view>
+      <view class="text">{{userInfo.invite_total}}</view>
       <view class="tv">邀请好友</view>
     </view>
   </view>
