--- a/pages/product/index.wxss
+++ b/pages/product/index.wxss
@@ -86,34 +86,32 @@ page {
 }
 
 .convert-info {
-  width: 100%;
   height: 100rpx;
-  display: flex;
-  align-items: center;
   margin-top: 20rpx;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
 }
 
 .convert-info .convert-header {
   width: 70rpx;
   height: 70rpx;
   border-radius: 50%;
-}
-
-.convert-info .convert-erinfo {
-  width: 60%;
-  display: flex;
-  align-items: center;
-  padding-left: 20rpx;
+  margin-top: 15rpx;
 }
 
 .convert-info .convert-name {
+  display: inline-block;
+  height: 100rpx;
+  line-height: 100rpx;
+  vertical-align: top;
   margin-left: 20rpx;
 }
 
 .convert-info .convert-time {
-  width: 40%;
-  text-align: right;
-  padding-right: 20rpx;
+  height: 100rpx;
+  line-height: 100rpx;
+  vertical-align: top;
+  float: right;
 }
 
 .convert-group {
