--- a/pages/invite_record/index.wxss
+++ b/pages/invite_record/index.wxss
@@ -25,5 +25,10 @@
   line-height: 100rpx;
   vertical-align: top;
   float: right;
+}
 
+.empty-text{
+  text-align: center;
+  font-size: 32rpx;
+  margin-top: 600rpx;
 }
