--- a/pages/order_record/index.wxss
+++ b/pages/order_record/index.wxss
@@ -83,3 +83,9 @@ page{
 .order .order-time{
   float: right;
 }
+
+.empty-text{
+  text-align: center;
+  font-size: 32rpx;
+  margin-top: 600rpx;
+}
