--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -30,18 +30,22 @@ page{
 
 /* 兑换运动步数 */
 .convert-strps {
-  width: 350rpx;
-  height: 350rpx;
+  width: 340rpx;
+  height: 340rpx;
   position: relative;
   margin: 0 auto;
+  border-radius: 50%;
+  background: #FE4634;
 }
 
 .cs-bg {
-  width: 100%;
-  height: 100%;
+  width: 300rpx;
+  height: 300rpx;
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 20rpx;
+  top: 20rpx;
+  border-radius: 50%;
+  background: white;
 }
 
 .cs-tv {
