--- a/pages/order_record/index.wxml
+++ b/pages/order_record/index.wxml
@@ -1,28 +1,33 @@
 <view class="index-container">
-  <view class="order-group" wx:for="{{items}}" wx:key="item">
+  <view wx:if="{{items.length>0}}">
+    <view class="order-group" wx:for="{{items}}" wx:key="item">
 
-    <view class="order">
-      <text class="tv-order-code">订单编号:</text>
-      <text class="order-code">{{item.ordercode}}</text>
+      <view class="order">
+        <text class="tv-order-code">订单编号:</text>
+        <text class="order-code">{{item.ordercode}}</text>
 
-      <text class="order-status" wx:if="{{item.status === 10}}">已兑换</text>
-      <text class="order-status" wx:elif="{{item.status === 20}}">已发货</text>
-      <text class="order-status" wx:else>已完成</text>
+        <text class="order-status" wx:if="{{item.status === 10}}">已兑换</text>
+        <text class="order-status" wx:elif="{{item.status === 20}}">已发货</text>
+        <text class="order-status" wx:else>已完成</text>
 
-      <image src="{{baseurl + item.product.imageurl}}" class="pro-img" mode="aspectFill" lazy-load="true" />
-      <view class="cl-group">
-        <view class="name">{{item.product.name}}</view>
-        <view class="price">{{item.product.coin}}金币         x1</view>
+        <image src="{{baseurl + item.product.imageurl}}" class="pro-img" mode="aspectFill" lazy-load="true" />
+        <view class="cl-group">
+          <view class="name">{{item.product.name}}</view>
+          <view class="price">{{item.product.coin}}金币 x1</view>
+        </view>
+
+        <view>
+          <text class="tv-order-number">快递编号:</text>
+          <text class="order-number" wx:if="{{item.couriernumber}}">{{item.couriernumber}}</text>
+          <text class="order-number" wx:else>暂未发货</text>
+        </view>
+        <view class="order-time">{{item.createdate}}</view>
       </view>
 
-      <view>
-        <text class="tv-order-number">快递编号:</text>
-        <text class="order-number" wx:if="{{item.couriernumber}}">{{item.couriernumber}}</text>
-        <text class="order-number" wx:else>暂未发货</text>
-      </view>
-      <view class="order-time">{{item.createdate}}</view>
     </view>
-
+  </view>
+  <view class="empty-text" wx:else>
+    您还没有兑换过商品哦！
   </view>
 
 </view>
