--- a/pages/address/index.wxml
+++ b/pages/address/index.wxml
@@ -30,7 +30,7 @@
 
   <text class="tv-title">详细地址</text>
   <!-- <input type="text" placeholder="详细地址" maxlength="50" value="{{address.address}}" class="tv-input" bindinput="addressInput"/> -->
-  <textarea  placeholder="详细地址"  class="test" auto-height="true" maxlength="50" value="{{address.address}}" bindinput="addressInput"></textarea>
+  <textarea  placeholder="详细地址"  class="test" auto-height="true" maxlength="50" value="{{address.address}}" bindinput="addressInput" disable-default-padding="true"></textarea>
 
   <view class="line"></view>
 
