--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -63,7 +63,7 @@
 
   </view>
 
-  <official-account></official-account>
+  <!-- <official-account></official-account> -->
   <!-- <image class="push" src="../../image/push.jpg" mode="aspectFit"/> -->
 
 </view>
